# pkg/rest/api/api_user_service.go
@@ -26,6 +26,20 @@ func NewUserAPIService() UserAPIServicer {
 	return &UserAPIService{}
 }
 
+// DeleteTradeById - Cancel trade
+func (s *UserAPIService) DeleteTradeById(ctx context.Context, tradingAccountId interface{}, tradeId interface{}) (ImplResponse, error) {
+	// TODO - update DeleteTradeById with the required logic for this service method.
+	// Add api_user_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	// TODO: Uncomment the next line to return response Response(204, {}) or use other options such as http.Ok ...
+	// return Response(204, nil),nil
+
+	// TODO: Uncomment the next line to return response Response(404, {}) or use other options such as http.Ok ...
+	// return Response(404, nil),nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("DeleteTradeById method not implemented")
+}
+
 // GetBookOrders - Get book orders
 func (s *UserAPIService) GetBookOrders(ctx context.Context, tradingAccountId interface{}) (ImplResponse, error) {
 	// TODO - update GetBookOrders with the required logic for this service method.
